--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "axios": "^0.21.1",
     "next": "^11.0.0",
     "react": "^17.0.2",
+    "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
+    "styled-components": "^5.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
+    "babel-plugin-styled-components": "^1.12.0",
     "postcss": "^8.3.0",
     "tailwindcss": "^2.1.4"
   }
