--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ant-design/icons": "^4.6.2",
     "axios": "^0.21.1",
     "next": "^11.0.0",
+    "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
