--- a/package.json
+++ b/package.json
@@ -19,9 +19,6 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.6",
-    "babel-plugin-styled-components": "^1.12.0",
-    "postcss": "^8.3.0",
-    "tailwindcss": "^2.1.4"
+    "babel-plugin-styled-components": "^1.12.0"
   }
 }
