--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
+    "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.0",
     "uuid": "^8.3.2"
   },
