--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "dev:dev": "SET NODE_OPTIONS=--openssl-legacy-provider && next dev",
-    "build": "next build",
+    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && next build",
     "export": "next export"
   },
   "dependencies": {
