--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "scripts": {
     "dev": "next dev",
     "dev:dev": "SET NODE_OPTIONS=--openssl-legacy-provider && next dev",
-    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && next build",
+    "build": "next build",
     "export": "next export"
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
-    "axios": "^0.21.1",
-    "next": "^11.0.0",
+    "axios": "^1.7.2",
+    "next": "^14.2.5",
     "nprogress": "^0.2.0",
     "rc-slider": "^9.7.2",
-    "react": "^17.0.2",
+    "react": "^18.3.1",
     "react-alice-carousel": "^2.5.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.3.1",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.0",
     "uuid": "^8.3.2"
